Update Google Maps iframe

--- a/iletisim.html
+++ b/iletisim.html
@@ -135,9 +135,9 @@
         <div class="container">
             <div class="map-container">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.5!2d32.8902141!3d39.9286941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d34e18b3928c45%3A0xd5f17e1ab37238c9!2sSaimekad%C4%B1n%2C%20G%C3%B6rg%C3%BCl%C3%BC%20Sk.%20No%3A8%20D%3Aa%2C%2006620%20Mamak%2FAnkara!5e0!3m2!1str!2str!4v1703699999999!5m2!1str!2str"
-                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                    title="Hikmet Sağlık Kabini Konum"></iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d331.0046470513954!2d32.89261618894433!3d39.92871612684451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d34fe82648a225%3A0xe2207b4d0ffaf3d!2zw5Z6ZWwgU2HEn2zEsWsgSGl6bWV0IE1lc2xlayBCaXJpbWkgU2HEn2zEsWsgbWVtdXJ1IMSwbGtlciBBa21hbg!5e0!3m2!1str!2str!4v1767600737381!5m2!1str!2str"
+                    width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade" title="Hikmet Sağlık Kabini Konum"></iframe>
             </div>
         </div>
     </section>
